[package]
name = "termv-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skim = "*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
whoami = "1.2.1"
ureq = "2.5.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
