[package]
name = "termv-rs"
authors = ["Roshan-R <roshanr2001@gmail.com>"]
description = """
Termv. Now blazingly fast
"""
homepage = "https://github.com/Roshan-R/termv-rs"
repository = "https://github.com/Roshan-R/termv-rs"
version = "0.1.0"
license = "GPL3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ureq = "2.5.0"
platform-dirs = "0.3.0"
clap = { version = "3.2.16", features = ["derive", "env"] }
colored = "2.0.0"
which = "4.2.5"

[target.'cfg(not(windows))'.dependencies]
skim = "*"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
# opt-level = "z"  # Optimize for size.
lto = true
